<resources>
    <string name="app_name">MISEMISE</string>
    <string name="my_app_name_korean">미세미세</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="time">시간</string>
    <string name="day">요일</string>
    <string name="active">활성화</string>

    <string name="main_now">현재 기상 상황 (좌우로 스크롤)</string>
    <string name="main_advertise">광고 (세부사항은 밑으로 스크롤하기)</string>
    <string name="main_detail">세부사항</string>

    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>


    <string name="main_detail_update_time">업데이트 시간 :</string>
    <string name="main_detail_pm10">PM10 측정소 이름 :</string>
    <string name="main_detail_pm25">PM2.5 측정소 이름 :</string>

    <string name="main_detail_o3">O3 측정소 이름 :</string>
    <string name="main_detail_no2">NO2 측정소 이름 :</string>
    <string name="main_detail_co">CO 측정소 이름 :</string>

    <string name="main_detail_so2">SO2 측정소 이름 :</string>
    <string name="main_detail_pm10_measure">PM10 측정망 분류 :</string>
    <string name="main_detail_pm25_measure">PM2.5 측정망 분류 :</string>

    <string name="main_detail_whole_value">통합지수 값 :</string>
    <string name="main_detail_whole_state">통합지수 상태 :</string>

    <string name="main_find_other_location">터치하여 다른 지역 정보 보기</string>


    <string name="nav_main">메인</string>
    <string name="nav_who">WHO 기준</string>
    <string name="nav_we">우리어플 기준</string>
    <string name="nav_alarm">알람</string>
    <string name="nav_share">공유하기</string>
    <string name="nav_contact">문의하기</string>
    <string name="nav_manage">설정</string>

    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="write_memo">간단한 메모를 남겨주세요!</string>

    <string name="contact_message">이용 중 불편한 사항은 아래에 있는 버튼을 통해
    개발자에게 알려주세요. 더 좋은 미세미세가 되도록 노력하겠습니다.
    \n\n
    [개발자 이메일]\n
    developer0223@gmail.com
    </string>
    <string name="contact_send">바로 이메일 보내기</string>

    <string name="pm10">미세먼지</string>
    <string name="pm25">초미세먼지</string>
    <string name="o3">오존</string>
    <string name="no2">이산화질소</string>
    <string name="co">일산화탄소</string> <!-- 농도 -->
    <string name="so2">아황산가스</string> <!-- 농도 -->

    <string name="grade_01">최고</string>
    <string name="grade_02">좋음</string>
    <string name="grade_03">양호</string>
    <string name="grade_04">보통</string>
    <string name="grade_05">나쁨</string>
    <string name="grade_06">상당히 나쁨</string>
    <string name="grade_07">매우 나쁨</string>
    <string name="grade_08">최악</string>

    <string name="main_detail_explain">
        미세미세는 사용자분과 가장 가까이 위치한, 정상 작동 중인 측정소의 실시간 정보를 보여드립니다.
        \n\n
        본 자료는 서울 열린 테이터광장(http://data.seoul.go.kr/)에서 제공하는 실시간 관측 자료이며
        실제 대기농도 수치와 차이가 있을 수 있습니다.

    </string>

    <string name="who_explain_00">
        미세미세는 WHO 기준을 사용합니다. 왜?\n
    </string>

    <string name="who_explain_01">
        한국 미세먼지 기준치는 WHO(세계보건기구) 기준치보다 터무니없이 미약합니다.
        이유는, 한국에서 WHO기준을 사용하면 \'나쁨\'으로 표기되는 날이 너무 많아 국민들의 불만을 살 수 있기 때문이라고 하네요.
        \n\n
        예) 미세먼지 농도가 76일 시,\n한국 기준: 보통\nWHO기준: 나쁨\n\n즉, 나쁜 환경이어도 그냥 보통인줄 알고 나가서 생활하라는 뜻인데요.
        1급 발암 물질인 미세먼지의 수치를 제대로 알지 못하고 생활하면 건강에 심각한 영향을 미칠 수 있습니다.
        이러한 점을 보완하기 위해 미세미세는 WHO기준을 사용하고 있습니다.
        항상 먼지 조심하시고 건강하세요.
    </string>

    <string name="who_explain_02">
        \n현재 WHO기준은 8단계 모드에서만 적용됩니다. 한국환경공단 기준을 이용하시고 싶으신 분들은 설정에서 4단계 모드로 바꿔주세요.
    </string>

    <string name="we_explain_01">
        좋음, 보통, 나쁨, 매우나쁨. 이 4단계 만으로는 부족합니다.
        좋음이거나 보통일때는 굳이 세부적으로 단계를 나눌 필요가 없다고 느끼실 수 있겠지만, 나쁨 이상일때는 다릅니다.
        나쁨, 상당히 나쁨, 매우 나쁨, 최악으로 나눠서 언제 어떤 조취를 ㅊ취하셔야 되는지 더욱 자세히 확인하세요.
        이미 아시겠지만 미세먼지는 세계보건기구에서 지정한 1급 발암 물질입니다.
        매우 나쁨 이상일때는 최대한 실외 활동을 자제해주세요.
        \n좌우로 스크롤하시면 단계별로 확인하실 수 있습니다.
    </string>

    <string name="we_explain_02">
        \n주의: 위 기준은 세계보건기구(WHO) 기준이므로 한국환경공단 (AirKorea) 기준과는 무관하다는 것을 말씀드립니다.
        미세미세는 위 기준치를 사용함으로 인해 생기는 피해에 대해 책임이 없음을 말씀그립니다.
        한국 환경공단 기준을 이용하시고 싶으신 분께서는 설정에서 4단계 모드로 변경해주세요."
    </string>

    <string name="share_explain_00">
        사랑하는 사람에게 알려주기\n
    </string>

    <string name="share_explain_01">
        1급 발암물질 미세먼지, 한국은 OECD 국가 중 최악 수준입니다.\n
        아껴주고 싶은 사람에게 이 내용과 미세미세를 알려주세요.\n
    </string>

    <string name="share_explain_02">
        보내질 메세지 내용: \'1급 발암물질 미세먼지, 한국 OECD 국가 중 최악 수준.
        요즘 미세먼지 많다는데 이 어플 한번 써보세요~
        세계보건기구(WHO) 기준으로 알려줘서 더 정확하다고 합니다.\'\n
    </string>

    <string name="share_explain_03">
        카카오톡 - 메세지 보내기
    </string>

    <!--
    <string name=""></string>
    -->

    <string name="banner_ad_unit_id">ca-app-pub-1033850575394920/7323823039</string>

</resources>
