<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/face_01"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_who"
            android:icon="@drawable/face_02"
            android:title="@string/nav_who" />
        <item
            android:id="@+id/nav_we"
            android:icon="@drawable/face_03"
            android:title="@string/nav_we" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/face_04"
            android:title="@string/nav_alarm" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/face_05"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/face_06"
            android:title="@string/nav_contact" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/face_07"
            android:title="@string/nav_manage" />
    </group>

</menu>
