<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56e3e4">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="23dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/share_explain_00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/share_explain_01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17dp"
        android:textColor="#ffffff"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/share_explain_02"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_explain_03"
        android:background="#ebe553"/>
</LinearLayout>