<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="#88FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:text="09:00"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:gravity="end|bottom">

        <ToggleButton
            android:id="@+id/list_item_monday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/monday"
            android:textOn="@string/monday"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/list_item_tuesday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/tuesday"
            android:textOn="@string/tuesday"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/list_item_wednesday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/wednesday"
            android:textOn="@string/wednesday"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/list_item_thursday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/thursday"
            android:textOn="@string/thursday"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/list_item_friday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/friday"
            android:textOn="@string/friday"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/list_item_saturday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/saturday"
            android:textOn="@string/saturday"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/list_item_sunday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/noColor"
            android:textColor="@color/black"
            android:textOff="@string/sunday"
            android:textOn="@string/sunday"
            android:textSize="12sp" />

    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:clickable="true"
        android:focusable="true"
        android:paddingRight="20dp" />

</LinearLayout>